[gd_scene load_steps=35 format=2]

[ext_resource path="res://scenes/levels/island.gd" type="Script" id=1]
[ext_resource path="res://scenes/storm/lightningSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/grass_tile_32x32.png" type="Texture" id=3]
[ext_resource path="res://scenes/environment/path.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/cliff_face.png" type="Texture" id=5]
[ext_resource path="res://assets/images/river_anim.png" type="Texture" id=6]
[ext_resource path="res://assets/images/trees_opening_background.png" type="Texture" id=7]
[ext_resource path="res://assets/images/river_bank_foreground.png" type="Texture" id=8]
[ext_resource path="res://scenes/environment/bridge.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/topDownPlayer/TopDownPlayer.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/follower/Follower.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/images/Kellywalk.png" type="Texture" id=12]
[ext_resource path="res://assets/images/Tomwalk.png" type="Texture" id=13]
[ext_resource path="res://assets/images/dalewalk.png" type="Texture" id=14]
[ext_resource path="res://assets/images/sarahWalk.png" type="Texture" id=15]
[ext_resource path="res://scenes/environment/gateOfHeaven.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/environment/vertTreeWall.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/environment/horzTreeWall.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/environment/tree1.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/environment/tree2.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/environment/tree3.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/environment/tree4.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/environment/tree5.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/environment/tree6.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/environment/tree7.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/environment/latrine.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/enemy/pooMan.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/environment/gate.tscn" type="PackedScene" id=28]
[ext_resource path="res://scenes/hud/hud.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/environment/van.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/environment/Fog.tscn" type="PackedScene" id=31]
[ext_resource path="res://scenes/transition/transitionArea.tscn" type="PackedScene" id=32]
[ext_resource path="res://scenes/hints/hint_trigger.tscn" type="PackedScene" id=33]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[node name="island" type="Node2D"]
script = ExtResource( 1 )

[node name="lightningSpawner" parent="." instance=ExtResource( 2 )]

[node name="grass" type="TextureRect" parent="."]
margin_right = 4000.0
margin_bottom = 2000.0
rect_min_size = Vector2( 4000, 2000 )
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="path" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 393257, 0, 0, 393264, 0, 0, 589861, 0, 0, 720930, 0, 0, 851999, 0, 0, 917533, 0, 0, 1048603, 0, 0, 1179666, 0, 0, 1179673, 0, 0, 1245206, 0, 0, 1310738, 0, 0, 1376271, 0, 0, 1441804, 0, 0, 1572874, 0, 0, 1703944, 0, 0 )

[node name="cliff_face" type="Sprite" parent="."]
position = Vector2( 607.034, 2014.35 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="cliff_face2" type="Sprite" parent="."]
position = Vector2( 1199.95, 2021.03 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="cliff_face3" type="Sprite" parent="."]
position = Vector2( 35.8314, 2009.34 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="river_anim" type="Sprite" parent="."]
position = Vector2( 604.232, 2154.16 )
texture = ExtResource( 6 )
vframes = 6
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="river_anim_timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="trees_opening_background" type="Sprite" parent="river_anim_timer"]
visible = false
position = Vector2( 613.575, 1729.4 )
texture = ExtResource( 7 )

[node name="river_bank_foreground" type="Sprite" parent="."]
position = Vector2( 604.05, 2332.04 )
texture = ExtResource( 8 )

[node name="bridge" parent="." instance=ExtResource( 9 )]
position = Vector2( 606.887, 1950 )
board_count = 25
spacing = -2.0

[node name="YSort" type="YSort" parent="."]
position = Vector2( 614.046, 1853.01 )

[node name="characters" type="YSort" parent="YSort"]

[node name="TopDownPlayer" parent="YSort/characters" instance=ExtResource( 10 )]
position = Vector2( 1173.16, -787.05 )

[node name="follower1" parent="YSort/characters" instance=ExtResource( 11 )]
position = Vector2( 1214.42, -709.98 )
speed = 95
followDistance = 45
targetPath = NodePath("../TopDownPlayer")
spriteTexture = ExtResource( 12 )
follower_name = "Kelly"

[node name="follower2" parent="YSort/characters" instance=ExtResource( 11 )]
position = Vector2( 1221.57, -823.106 )
speed = 95
followDistance = 40
targetPath = NodePath("../follower1")
spriteTexture = ExtResource( 13 )
follower_name = "Dale"

[node name="follower3" parent="YSort/characters" instance=ExtResource( 11 )]
position = Vector2( 1284.02, -760.099 )
speed = 95
followDistance = 40
targetPath = NodePath("../follower2")
spriteTexture = ExtResource( 14 )
follower_name = "Tom"

[node name="follower4" parent="YSort/characters" instance=ExtResource( 11 )]
position = Vector2( 1088.67, -745.73 )
speed = 95
followDistance = 45
targetPath = NodePath("../follower3")
spriteTexture = ExtResource( 15 )
follower_name = "Sarah"

[node name="gateOfHeaven" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( -8.04431, -20.527 )

[node name="trees" type="YSort" parent="YSort"]
editor/display_folded = true
position = Vector2( -614.046, -1853.01 )

[node name="vertTreeWall" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 203.25, 1511.9 )

[node name="vertTreeWall20" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 81.25, 1425.9 )

[node name="vertTreeWall11" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3701.25, 1529.9 )

[node name="vertTreeWall4" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 203.25, 935.902 )

[node name="vertTreeWall21" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2398.07, 422.488 )

[node name="vertTreeWall46" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2040.09, 550.432 )

[node name="vertTreeWall27" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3224.94, 915.042 )

[node name="vertTreeWall40" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1707.02, 402.744 )

[node name="vertTreeWall10" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3701.25, 953.902 )

[node name="vertTreeWall7" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3773.16, 565.332 )

[node name="vertTreeWall12" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2158.64, 621.38 )

[node name="vertTreeWall47" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1606.8, 879.853 )

[node name="vertTreeWall45" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1800.66, 749.324 )

[node name="vertTreeWall30" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2618.91, 900.333 )

[node name="vertTreeWall42" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1100.99, 388.035 )

[node name="vertTreeWall36" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2594.19, 1679.24 )

[node name="vertTreeWall37" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2983.64, 1286.69 )

[node name="vertTreeWall19" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3811.16, 394.157 )

[node name="vertTreeWall50" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3435.09, 199.011 )

[node name="vertTreeWall51" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3230.89, 200.303 )

[node name="vertTreeWall2" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 203.302, 1689.28 )

[node name="vertTreeWall22" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 81.302, 1603.28 )

[node name="vertTreeWall16" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3701.3, 1707.28 )

[node name="vertTreeWall18" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3701.3, 1908.28 )

[node name="vertTreeWall5" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 203.302, 1113.28 )

[node name="vertTreeWall23" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 81.302, 1027.28 )

[node name="vertTreeWall28" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3224.99, 1092.42 )

[node name="vertTreeWall41" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1707.07, 580.122 )

[node name="vertTreeWall44" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1707.07, 762.345 )

[node name="vertTreeWall14" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3701.3, 1131.28 )

[node name="vertTreeWall8" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3773.21, 742.706 )

[node name="vertTreeWall13" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1885.32, 829.439 )

[node name="vertTreeWall31" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2431.93, 1094.76 )

[node name="vertTreeWall39" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 914.01, 582.462 )

[node name="vertTreeWall35" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2407.2, 1873.66 )

[node name="vertTreeWall38" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2796.65, 1481.12 )

[node name="vertTreeWall33" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1804.42, 1540.77 )

[node name="vertTreeWall48" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 438.25, 783.504 )

[node name="vertTreeWall3" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 203.302, 1889.28 )

[node name="vertTreeWall24" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 81.302, 1803.28 )

[node name="vertTreeWall6" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 203.302, 1313.28 )

[node name="vertTreeWall25" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 81.302, 1227.28 )

[node name="vertTreeWall15" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3701.3, 1331.28 )

[node name="vertTreeWall9" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 3773.21, 942.706 )

[node name="vertTreeWall26" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2608.53, 205.714 )

[node name="vertTreeWall52" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2857.96, 207.006 )

[node name="vertTreeWall29" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 81.302, 87.276 )

[node name="vertTreeWall17" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1595.21, 1048.97 )

[node name="vertTreeWall43" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 695, 795.703 )

[node name="vertTreeWall32" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 2055.48, 1327.92 )

[node name="vertTreeWall49" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 689.31, 570.654 )

[node name="vertTreeWall34" parent="YSort/trees" instance=ExtResource( 17 )]
position = Vector2( 1514.31, 1760.29 )

[node name="horzTreeWall" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 350.338, 1880.41 )

[node name="horzTreeWall2" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 831.822, 1894.38 )

[node name="horzTreeWall20" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 3506.02, 229.561 )

[node name="horzTreeWall45" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 3172.54, 813.738 )

[node name="horzTreeWall53" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1654.62, 301.44 )

[node name="horzTreeWall32" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 413.167, 932.139 )

[node name="horzTreeWall8" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2001.86, 1894.36 )

[node name="horzTreeWall26" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1114.38, 1081.07 )

[node name="horzTreeWall5" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1416.82, 1894.38 )

[node name="horzTreeWall27" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 529.341, 1081.09 )

[node name="horzTreeWall11" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2586.86, 1894.36 )

[node name="horzTreeWall30" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2279.6, 450.64 )

[node name="horzTreeWall54" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1921.62, 578.584 )

[node name="horzTreeWall35" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2739.87, 729.592 )

[node name="horzTreeWall50" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1221.95, 217.294 )

[node name="horzTreeWall41" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2715.15, 1508.5 )

[node name="horzTreeWall44" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 3104.6, 1115.95 )

[node name="horzTreeWall48" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 824.291, 528.054 )

[node name="horzTreeWall15" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 3171.86, 1894.36 )

[node name="horzTreeWall23" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2752.82, 231.605 )

[node name="horzTreeWall3" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1026.82, 1894.38 )

[node name="horzTreeWall25" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 3699.73, 229.561 )

[node name="horzTreeWall34" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 608.167, 932.139 )

[node name="horzTreeWall10" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2196.86, 1894.36 )

[node name="horzTreeWall19" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1454.44, 1078.28 )

[node name="horzTreeWall33" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 589.392, 791.609 )

[node name="horzTreeWall36" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1914.71, 1357.23 )

[node name="horzTreeWall55" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 610.073, 601.722 )

[node name="horzTreeWall39" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1373.54, 1789.61 )

[node name="horzTreeWall7" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1611.82, 1894.38 )

[node name="horzTreeWall29" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 724.341, 1081.09 )

[node name="horzTreeWall13" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2781.86, 1894.36 )

[node name="horzTreeWall18" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2014.33, 643.117 )

[node name="horzTreeWall37" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2474.6, 922.069 )

[node name="horzTreeWall51" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 956.68, 409.771 )

[node name="horzTreeWall42" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2449.88, 1700.97 )

[node name="horzTreeWall43" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2839.33, 1308.43 )

[node name="horzTreeWall14" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 3366.86, 1894.36 )

[node name="horzTreeWall22" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2973.09, 229.778 )

[node name="horzTreeWall4" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1221.82, 1894.38 )

[node name="horzTreeWall21" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 334.341, 1081.09 )

[node name="horzTreeWall46" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2977.52, 814.133 )

[node name="horzTreeWall49" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1459.6, 301.835 )

[node name="horzTreeWall9" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2391.86, 1894.36 )

[node name="horzTreeWall17" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1738.7, 857.91 )

[node name="horzTreeWall38" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2119.45, 1157.31 )

[node name="horzTreeWall57" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 776.135, 421.141 )

[node name="horzTreeWall40" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1657.8, 1569.24 )

[node name="horzTreeWall56" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 291.63, 811.974 )

[node name="horzTreeWall6" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1806.82, 1894.38 )

[node name="horzTreeWall28" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 919.341, 1081.09 )

[node name="horzTreeWall12" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2976.86, 1894.36 )

[node name="horzTreeWall31" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2482.5, 235.733 )

[node name="horzTreeWall16" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 3561.86, 1894.36 )

[node name="horzTreeWall24" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 3158.68, 246.625 )

[node name="horzTreeWall47" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 2782.92, 817.833 )

[node name="horzTreeWall52" parent="YSort/trees" instance=ExtResource( 18 )]
position = Vector2( 1265, 305.535 )

[node name="tree1" parent="YSort/trees" instance=ExtResource( 19 )]
position = Vector2( 398.283, 1630.58 )

[node name="tree2" parent="YSort/trees" instance=ExtResource( 20 )]
position = Vector2( 1082.15, 1624.18 )

[node name="tree8" parent="YSort/trees" instance=ExtResource( 20 )]
position = Vector2( 752.122, 1373.66 )

[node name="tree3" parent="YSort/trees" instance=ExtResource( 21 )]
position = Vector2( 399.046, 1738.79 )

[node name="tree4" parent="YSort/trees" instance=ExtResource( 22 )]
position = Vector2( 437.886, 1936.44 )

[node name="tree5" parent="YSort/trees" instance=ExtResource( 23 )]
position = Vector2( 849.394, 1754.49 )

[node name="tree6" parent="YSort/trees" instance=ExtResource( 24 )]
position = Vector2( 840.849, 1340.88 )

[node name="tree9" parent="YSort/trees" instance=ExtResource( 24 )]
position = Vector2( 607.174, 1450.27 )

[node name="tree7" parent="YSort/trees" instance=ExtResource( 25 )]
position = Vector2( 526.543, 1539.15 )

[node name="latrine" parent="YSort" instance=ExtResource( 26 )]
position = Vector2( 668.077, -1242.96 )

[node name="enemies" type="YSort" parent="YSort"]

[node name="pooMan" parent="YSort/enemies" instance=ExtResource( 27 )]
position = Vector2( 125.701, -319.636 )
follower_msg = "What the hell is that!? P-poo?"

[node name="pooMan2" parent="YSort/enemies" instance=ExtResource( 27 )]
position = Vector2( 540.273, -1135.99 )

[node name="pooMan4" parent="YSort/enemies" instance=ExtResource( 27 )]
position = Vector2( 536.376, -1488.59 )

[node name="pooMan3" parent="YSort/enemies" instance=ExtResource( 27 )]
position = Vector2( 788.274, -1133.99 )

[node name="pooMan5" parent="YSort/enemies" instance=ExtResource( 27 )]
position = Vector2( 784.378, -1486.59 )

[node name="gate" parent="YSort" instance=ExtResource( 28 )]
position = Vector2( 2704.47, -1650.55 )

[node name="hud" parent="." instance=ExtResource( 29 )]

[node name="van" parent="." instance=ExtResource( 30 )]
position = Vector2( 605.229, 2300.19 )

[node name="Fog" parent="." instance=ExtResource( 31 )]
visible = false
position = Vector2( 1972.8, 1063.96 )

[node name="to_cemetery" parent="." instance=ExtResource( 32 )]
position = Vector2( 3320.97, 239.161 )
destination = "res://scenes/cemetery/cemetery.tscn"

[node name="hint1" parent="." instance=ExtResource( 33 )]
position = Vector2( 1272.39, 1394.67 )
messages = "The bathrooms are just north of here. Jason better be there!
Let's check the bathrooms north of here!"
wait_time = 15.0
shape = SubResource( 1 )
[connection signal="timeout" from="river_anim_timer" to="." method="_on_river_anim_timer_timeout"]
